fix button not showing on iOS fullscreen

--- a/client/css/layout.scss
+++ b/client/css/layout.scss
@@ -96,6 +96,7 @@ input[type=submit] {
     color: #162636;
     width: 15%;
     font-size: 16px;
+    padding:0 !important;
 }
 
 .message {
